user information documentation fixed
